change url of root index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Keiko Corp</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0" />
-        <meta http-equiv="refresh" content="0; url=http://terencelimsayjian.github.io/dist/index.html" />
+        <meta http-equiv="refresh" content="0; url=./dist/index.html" />
     </head>
     <body>
     </body>
